# beyond-recall

./: .gitignore  AGENTS.md  CITATION.cff  ISSUES.md  LICENSE  README.md  REPRODUCE.md  llms.txt  requirements.txt
agents/: README.md  (+2 more)
baselayer/: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VENDORED_README.md  lexicon_schema.yaml  llms.txt  pyproject.toml
baselayer/.githooks/: pre-commit
baselayer/.github/workflows/: test.yml
baselayer/docs/: vision_agentic_world.md
baselayer/docs/core/: ARCHITECTURE.md  BATCH_EXTRACTION_SPEC.md  DECISIONS.md  DESIGN_PRINCIPLES.md  DESIGN_PRINCIPLES_ALIGNMENT_S100.md  EPISTEMIC_AXIOMS.md  FLOW_GUIDE.md  MAGIC_LINKS.md  MCP_REGISTRY_SUBMISSIONS.md  PROJECT_OVERVIEW.md  SERVING_LAYER_PLAN.md  SERVING_LAYER_SPEC.md  (+1 more)
baselayer/examples/: README.md
baselayer/scripts/: __init__.py  __main__.py  agent_pipeline.py  api_client.py  assemble_brief.py  author_layers.py  batch_extract.py  checkpoint.py  cli.py  config.py  embed.py  extract_facts.py  import_conversations.py  init_database.py  llm_provider.py  mcp_server.py  semantic_search.py  swebench_harness.py  ui.py  verify_provenance.py
baselayer/tests/: conftest.py  test_agent_pipeline.py  test_api_client.py  test_author_provenance.py  test_batch_extract.py  test_checkpoint.py  test_cli.py  test_data.py  test_edge_cases.py  test_extract_normalizers.py  test_gates.py  test_golden_dataset.py  test_llm_provider.py  test_mcp.py  test_mcp_extended.py  test_pipeline_e2e.py  test_privacy.py  test_seed_format.py  test_unified_brief.py  test_unit.py
(+3680 files in other folders)
