[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baselayer"
version = "0.2.0"
description = "Behavioral alignment infrastructure for AI agents. Encodes how a person reasons, decides, and communicates into portable specifications. MCP server, 47-predicate behavioral grammar, three-layer architecture."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Aarik Gulaya"},
]
keywords = ["ai", "agent-alignment", "behavioral-specification", "mcp", "behavioral-compression", "agentic-infrastructure", "autonomous-agents", "claude", "llm"]

dependencies = [
    "anthropic~=0.45",
    "chromadb~=0.6",
    "sentence-transformers~=3.0",
    "numpy~=1.26",
    "python-docx~=0.8",
    "requests~=2.31",
    "httpx>=0.24",
    "mcp[cli]~=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
baselayer = "baselayer.cli:main"
baselayer-mcp = "baselayer.mcp_server:main"

[project.urls]
Homepage = "https://base-layer.ai"
Repository = "https://github.com/agulaya24/BaseLayer"
Documentation = "https://base-layer.ai/llms-full.txt"
"Bug Tracker" = "https://github.com/agulaya24/BaseLayer/issues"

[tool.setuptools]
packages = ["baselayer", "baselayer.archive", "baselayer.archive.dead_pipeline_steps", "baselayer.experiments"]

[tool.setuptools.package-dir]
"" = "src"
